--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <h1>Array Manipulation Tasks</h1>
 
-    <button onclick="PrintDeveloper()">Print Developers</button>
+    <button onclick="PrintHighEarningDevelopers()">Print Developers</button>
     <button onclick="addData()">Add Data</button>
     <button onclick="removeAdmin()">Remove Admins</button>
     <button onclick="concatenateArray()">Concatenate Array</button>
