--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <h1>Array Manipulation Tasks</h1>
 
-    <button onclick="PrintHighEarningDevelopers()">Print Developers</button>
+    <button onclick="PrintDeveloper()">Print Developers</button>
     <button onclick="addData()">Add Data</button>
     <button onclick="removeAdmin()">Remove Admins</button>
     <button onclick="concatenateArray()">Concatenate Array</button>
@@ -20,7 +20,7 @@
     <button onclick="uniqueProfessions()">Unique Professions</button>
     <button onclick="sortByAge()">Sort by Age</button>
     <button onclick="updateJohnsProfession()">Update John's Profession</button>
-    <button onclick="getTotalProfessions()">Get Profession Count</button>
+    <button onclick="groupByProfession()">Get Profession Count</button>
 
     <script src="./script.js"></script>
 </body>
